WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
281236
Assert failure in BuilderConverter::convertLength function call
https://bugs.webkit.org/show_bug.cgi?id=281236
Summary
Assert failure in BuilderConverter::convertLength function call
Anil Hebbar
Reported
2024-10-10 11:41:13 PDT
Created
attachment 472897
[details]
This file reproduces the error Assert failure is being caused by object type mismatch in downcast function. The bug was exposed by the attached reduced HTML file
Attachments
This file reproduces the error
(1.11 KB, text/html)
2024-10-10 11:41 PDT
,
Anil Hebbar
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Anil Hebbar
Comment 1
2024-10-10 13:50:08 PDT
<
rdar://problem/137176081
>
Anil Hebbar
Comment 2
2024-10-10 13:50:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34996
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug