Assert failure in BuilderConverter::convertLength function call https://bugs.webkit.org/show_bug.cgi?id=281236 rdar://137176081

Reviewed by NOBODY (OOPS!).

The crash was because of type mismatch in downConvert function called by convertLength. The function was  being called for an object which had no length.

* LayoutTests/fast/css/css-crash-convertLength-expected.txt: Added.
* LayoutTests/fast/css/css-crash-convertLength.html: Added.
* Source/WebCore/css/typedom/InlineStylePropertyMap.cpp:
(WebCore::InlineStylePropertyMap::setProperty):