Source/WebCore/style/StyleBuilderConverter.h
@@ -1840,7 +1840,9 @@ inline OptionSet<HangingPunctuation> BuilderConverter::convertHangingPunctuation
 
 inline GapLength BuilderConverter::convertGapLength(BuilderState& builderState, const CSSValue& value)
 {
-    return (value.valueID() == CSSValueNormal) ? GapLength() : GapLength(convertLength(builderState, value));
+    if (!value.isPrimitiveValue())
+        return { };
+    return value.valueID() == CSSValueNormal ? GapLength() : convertLength(builderState, value);
 }
 
 inline OffsetRotation BuilderConverter::convertOffsetRotate(BuilderState& builderState, const CSSValue& value)
